--- a/resources/views/landing/index.edge
+++ b/resources/views/landing/index.edge
@@ -25,7 +25,7 @@
 <div class="container">
   <h3 class="text-center text-success my-3">Buy Offers</h3>
   <div class="card component-card_1 mb-5 p-5 w-100">
-    <div class="card-header text-center bg-white">
+    <div class="card-header text-center">
       <div class="card-header--title">
         <b>Buy Offers</b>
       </div>
@@ -61,7 +61,7 @@
           </td>
         </tr>
         </tbody>
-        <tfoot class="thead-light">
+        <tfoot>
         <tr>
           <th>Seller</th>
           <th>Payment Method</th>
@@ -80,7 +80,7 @@
 <div class="container">
   <h3 class="text-center text-danger my-3">Sell Offers</h3>
   <div class="card component-card_4 p-5 mb-5 w-100">
-    <div class="card-header text-center bg-white">
+    <div class="card-header text-center">
       <div class="card-header--title">
         <b>Sell Offers</b>
       </div>
@@ -116,14 +116,14 @@
           </td>
         </tr>
         </tbody>
-        <tfoot class="thead-light">
+        <tfoot>
         <tr>
           <th>Seller</th>
           <th>Payment Method</th>
           <th>coin</th>
           <th>Price</th>
           <th>Limits</th>
-          <th class="no-sort text-cente fixedc">Actions</th>
+          <th class="no-sort text-center fixedc">Actions</th>
         </tr>
         </tfoot>
       </table>
