--- a/resources/views/landing/login.edge
+++ b/resources/views/landing/login.edge
@@ -8,13 +8,13 @@
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="/images/exchange.png" />
-  <link href="/styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="/styles/plugins.css" rel="stylesheet" type="text/css" />
-  <link href="/styles/authentication/form-2.css" rel="stylesheet" type="text/css" />
+  <link href="/light/styles/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link href="/light/styles/plugins.css" rel="stylesheet" type="text/css" />
+  <link href="/light/styles/authentication/form-2.css" rel="stylesheet" type="text/css" />
   <!-- END GLOBAL MANDATORY STYLES -->
-  <link rel="stylesheet" type="text/css" href="/styles/forms/theme-checkbox-radio.css">
-  <link rel="stylesheet" type="text/css" href="/styles/forms/switches.css">
-  <link rel="stylesheet" href="/styles/elements/alert.css">
+  <link rel="stylesheet" type="text/css" href="/light/styles/forms/theme-checkbox-radio.css">
+  <link rel="stylesheet" type="text/css" href="/light/styles/forms/switches.css">
+  <link rel="stylesheet" href="/light/styles/elements/alert.css">
   <script src="https://hcaptcha.com/1/api.js" async defer></script>
   <style type="text/css">
     .h-captcha{
@@ -102,6 +102,8 @@
 <!-- END GLOBAL MANDATORY SCRIPTS -->
 <script src="/js/authentication/form-2.js"></script>
 <script src="/form/login.js"></script>
+<script src="/online/o.js"></script>
+
 
 </body>
 </html>
