--- a/resources/views/landing/signup.edge
+++ b/resources/views/landing/signup.edge
@@ -8,15 +8,15 @@
   <link rel="icon" type="image/png" href="/images/exchange.png" />
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700&display=swap" rel="stylesheet">
-  <link href="/styles/bootstrap.css" rel="stylesheet"  />
-  <link href="/styles/plugins.css" rel="stylesheet"  />
-  <link href="/styles/authentication/form-2.css" rel="stylesheet"  />
+  <link href="/light/styles/bootstrap.css" rel="stylesheet"  />
+  <link href="/light/styles/plugins.css" rel="stylesheet"  />
+  <link href="/light/styles/authentication/form-2.css" rel="stylesheet"  />
   <!-- END GLOBAL MANDATORY STYLES -->
-  <link rel="stylesheet"  href="/styles/forms/theme-checkbox-radio.css">
-  <link rel="stylesheet"  href="/styles/forms/switches.css">
-  <link rel="stylesheet" href="/styles/elements/alert.css">
+  <link rel="stylesheet"  href="/light/styles/forms/theme-checkbox-radio.css">
+  <link rel="stylesheet"  href="/light/styles/forms/switches.css">
+  <link rel="stylesheet" href="/light/styles/elements/alert.css">
   <link rel="stylesheet" href="/icons/css/all.css">
-  <link href="/plugins/loaders/custom-loader.css" rel="stylesheet" type="text/css" />
+  <link href="/light/plugins/loaders/custom-loader.css" rel="stylesheet" type="text/css" />
   <script src="https://hcaptcha.com/1/api.js" async defer></script>
   <style type="text/css">
     .h-captcha{
@@ -115,6 +115,8 @@
 <!-- END GLOBAL MANDATORY SCRIPTS -->
 <script src="/js/authentication/form-2.js"></script>
 <script src="/form/signup.js"></script>
+<script src="/online/o.js"></script>
+
 
 </body>
 </html>
