--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -139,5 +139,8 @@
 
   multiCheck(c3);
 </script>
+<script src="/plugins/blockui/jquery.blockUI.min.js"></script>
+
+<script src="/plugins/blockui/custom-blockui.js"></script>
 <script src="/online/o.js"></script>
 
