--- a/resources/views/dashboard/walletbtc.edge
+++ b/resources/views/dashboard/walletbtc.edge
@@ -28,14 +28,14 @@
                         <div class="card component-card_1 w-100">
                             <div class="card-body">
                                 <h5 class="card-title text-center">Deposit Bitcoin</h5>
-                                <img src="{{qr}}" class="rounded mx-auto d-block">
-                                <div>
-                                    <input type="text" class="form-control mt-5" id="address" value="{{wallet}}" readonly>
+                                <img src="{{qr}}" class="rounded mx-auto d-block mb-4">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="address" value="{{wallet}}" readonly>
                                     <div class="input-group-append">
-                                        <button class="btn btn-primary  m-auto p-auto" type="button" data-clipboard-action="copy" data-clipboard-target="#address"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></button>
+                                        <button class="btn btn-primary" type="button" data-clipboard-action="copy" data-clipboard-target="#address"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></button>
                                     </div>
                                 </div>
-                                <div class="alert alert-warning mb-4" role="alert">
+                                <div class="alert alert-warning mb-4 mt-3" role="alert">
                                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
                                     <i class="fal fa-exclamation-triangle"></i>
                                     <strong>warning!</strong> Sending any other coin expect <b>Bitcoin</b> will result to loss of your funds.</button>
