--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -1,24 +1,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>{{title}}</title>
 <link rel="icon" type="image/png" href="/images/exchange.png" />
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/plugins.css">
-    <link href="/styles/authentication/form-2.css" rel="stylesheet" type="text/css" />
-    <link href="/styles/scrollspyNav.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/light/styles/bootstrap.css">
+    <link rel="stylesheet" href="/light/styles/plugins.css">
+    <link href="/light/styles/authentication/form-2.css" rel="stylesheet" type="text/css" />
+    <link href="/light/styles/scrollspyNav.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="/icons/css/all.css">
-    <link rel="stylesheet" type="text/css" href="/plugins/table/datatable/datatables.css">
-    <link rel="stylesheet" type="text/css" href="/plugins/table/datatable/dt-global_style.css">
-    <link rel="stylesheet" href="/styles/components/cards/card.css">
-    <link rel="stylesheet" href="/styles/elements/tooltip.css">
-    <link rel="stylesheet" href="/styles/override.css">
+    <link rel="stylesheet" type="text/css" href="/light/plugins/table/datatable/datatables.css">
+    <link rel="stylesheet" type="text/css" href="/light/plugins/table/datatable/dt-global_style.css">
+    <link rel="stylesheet" href="/light/styles/components/cards/card.css">
+    <link rel="stylesheet" href="/light/styles/elements/tooltip.css">
+    <link rel="stylesheet" href="/light/styles/override.css">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top pt-3 pb-3 bg-white">
             <a class="navbar-brand mr-5" href="/">
                 <img src="/images/exchange.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
               {{title}}
 
             </a>
-        <button class="navbar-toggler is-active collapsed hamburger hamburger--elastic mr-3" type="button"
+        <button class="navbar-toggler is-active collapsed hamburger hamburger--elastic mr-3 bg-white" type="button"
                 data-toggle="collapse" data-target="#nav-second" aria-controls="nav-second"
                 aria-expanded="false" aria-label="Toggle navigation">
                     <span class="hamburger-box">
@@ -58,6 +58,9 @@
                         <a class="dropdown-item" href="#"><img src="/images/united-kingdom.png" width="20" height="20"><span class="m-3">Eng</span></a>
                     </div>
                 </li>
+              <li class="nav-item">
+                <button class="btn btn-sm btn-dark mb-2 mr-2 p-0 rounded-circle" id="theme-switcher"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-moon"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg></button>
+              </li>
             </ul>
 
             <div class="nav-item">
