--- a/public/darkness/styles/override.css
+++ b/public/darkness/styles/override.css
@@ -1,7 +1,7 @@
 .fixedc{
   position: sticky!important;
   right: 0!important;
-  background-color: transparent;
+  background-color: #060818;
 }
 .notification-scroll{
   position: relative;
