--- a/resources/views/partials/adminheader.edge
+++ b/resources/views/partials/adminheader.edge
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit">
   <link rel="icon" type="image/png" href="/images/exchange.png" />
   <title>{{title}}</title>
-    <link href="/light/styles/dashboard/loader.css" rel="stylesheet" type="text/css" class="darkness" />
-    <link href="/light/plugins/animate/animate.css" rel="stylesheet">
-    <script src="/js/loader.js"></script>
+  <link href="/light/styles/dashboard/loader.css" rel="stylesheet" type="text/css" class="darkness" />
+  <link href="/light/plugins/animate/animate.css" rel="stylesheet">
+  <script src="/js/loader.js"></script>
 
-    <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
-    <link href="/light/styles/dashboard/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="/light/styles/dashboard/plugins.css" rel="stylesheet" type="text/css" />
-    <!-- END GLOBAL MANDATORY STYLES -->
+  <!-- BEGIN GLOBAL MANDATORY STYLES -->
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+  <link href="/light/styles/dashboard/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link href="/light/styles/dashboard/plugins.css" rel="stylesheet" type="text/css" />
+  <!-- END GLOBAL MANDATORY STYLES -->
 
-    <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM STYLES -->
-    <link href="/light/plugins/apex/apexcharts.css" rel="stylesheet" type="text/css">
-    <link href="/light/styles/dashboard/dash_1.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/light/styles/components/tabs-accordian/custom-tabs.css">
-    <link rel="stylesheet" href="/light/styles/components/tabs-accordian/custom-accordions.css">
-    <link rel="stylesheet" href="/icons/css/all.css">
-    <link rel="stylesheet" href="/light/styles/components/cards/card.css">
-    <link rel="stylesheet" href="/light/styles/elements/alert.css">
+  <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM STYLES -->
+  <link href="/light/plugins/apex/apexcharts.css" rel="stylesheet" type="text/css">
+  <link href="/light/styles/dashboard/dash_1.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="/light/styles/components/tabs-accordian/custom-tabs.css">
+  <link rel="stylesheet" href="/light/styles/components/tabs-accordian/custom-accordions.css">
+  <link rel="stylesheet" href="/icons/css/all.css">
+  <link rel="stylesheet" href="/light/styles/components/cards/card.css">
+  <link rel="stylesheet" href="/light/styles/elements/alert.css">
 
   <link rel="stylesheet" type="text/css" href="/light/plugins/select2/select2.min.css">
   <link rel="stylesheet" type="text/css" href="/light/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
@@ -37,15 +37,15 @@
 
 
 
-    <link rel="stylesheet" type="text/css" href="/light/plugins/select2/select2.min.css">
-    <link rel="stylesheet" type="text/css" href="/light/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
-    <link rel="stylesheet" type="text/css" href="/light/styles/forms/theme-checkbox-radio.css">
-    <link rel="stylesheet" type="text/css" href="/light/styles/forms/switches.css">
-    <link rel="stylesheet" href="/light/styles/override.css">
-    <link href="/light/plugins/notification/snackbar/snackbar.min.css" rel="stylesheet" type="text/css" />
-    <link href="/light/plugins/animate/animate.css" rel="stylesheet" type="text/css" />
-    <link href="/light/styles/components/custom-modal.css" rel="stylesheet" type="text/css" />
-    <link href="/light/styles/components/custom-countdown.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="/light/plugins/select2/select2.min.css">
+  <link rel="stylesheet" type="text/css" href="/light/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
+  <link rel="stylesheet" type="text/css" href="/light/styles/forms/theme-checkbox-radio.css">
+  <link rel="stylesheet" type="text/css" href="/light/styles/forms/switches.css">
+  <link rel="stylesheet" href="/light/styles/override.css">
+  <link href="/light/plugins/notification/snackbar/snackbar.min.css" rel="stylesheet" type="text/css" />
+  <link href="/light/plugins/animate/animate.css" rel="stylesheet" type="text/css" />
+  <link href="/light/styles/components/custom-modal.css" rel="stylesheet" type="text/css" />
+  <link href="/light/styles/components/custom-countdown.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/light/styles/bootstrap-rating.css">
   <link rel="stylesheet" href="/icons/css/all.css">
 
@@ -55,8 +55,8 @@
 <body>
 <!-- BEGIN LOADER -->
 <div id="load_screen"> <div class="loader"> <div class="loader-content">
-            <div class="spinner-grow text-info align-self-center"></div>
-        </div></div></div>
+  <div class="spinner-grow text-info align-self-center"></div>
+</div></div></div>
 <!--  END LOADER -->
 
 <!--  BEGIN NAVBAR  -->
@@ -106,7 +106,7 @@
         </a>
         <div class="dropdown-menu p-0 position-absolute p-4" aria-labelledby="messageDropdown">
           <div class="">
-      <a><h6 class="dropdown-header">Messages</h6></a>
+            <a><h6 class="dropdown-header">Messages</h6></a>
             <a class="dropdown-item">
               <div class="pt-2">
                 <div class="media notification-new">
@@ -245,7 +245,7 @@
         <li class="menu">
           <a href="#app" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
             <div class="">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg><span>Wallets</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg><span>Users</span>
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
@@ -253,16 +253,7 @@
           </a>
           <ul class="collapse submenu list-unstyled" id="app" data-parent="#accordionExample">
             <li>
-              <a href="/walletbtc">Btc </a>
-            </li>
-            <li>
-              <a href="/walletbch"> Bch  </a>
-            </li>
-            <li>
-              <a href="/walletdash"> Dash </a>
-            </li>
-            <li>
-              <a href="/walletltc">Ltc</a>
+              <a href="/walletbtc">Manage users</a>
             </li>
           </ul>
         </li>
@@ -271,7 +262,7 @@
           <a href="#components" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
             <div class="">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>
-              <span>Marketplace</span>
+              <span>Trades</span>
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
@@ -279,13 +270,13 @@
           </a>
           <ul class="collapse submenu list-unstyled" id="components" data-parent="#accordionExample">
             <li>
-              <a href="/buy_coin">Buy Coin </a>
+              <a href="/buy_coin">Disputed </a>
             </li>
             <li>
-              <a href="/sell_coin"> Sell Coin  </a>
+              <a href="/sell_coin"> successful  </a>
             </li>
             <li>
-              <a href="/create_offer"> Create Offer </a>
+              <a href="/create_offer"> pending </a>
             </li>
           </ul>
         </li>
@@ -294,7 +285,7 @@
           <a href="#elements" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
             <div class="">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-              <span>Profile</span>
+              <span>Communication</span>
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
@@ -302,30 +293,12 @@
           </a>
           <ul class="collapse submenu list-unstyled" id="elements" data-parent="#accordionExample">
             <li>
-              <a href="/mytrades"> Trades </a>
+              <a href="/mytrades"> Mass alert </a>
             </li>
             <li>
-              <a href="/offers"> Offers </a>
+              <a href="/offers"> mass push notification </a>
             </li>
           </ul>
-        </li>
-
-        <li class="menu">
-          <a href="/settings" aria-expanded="false" class="dropdown-toggle">
-            <div class="">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"/></svg>
-              <span>Settings</span>
-            </div>
-          </a>
-        </li>
-
-        <li class="menu">
-          <a href="/referral" aria-expanded="false" class="dropdown-toggle">
-            <div class="">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
-              <span>Referral</span>
-            </div>
-          </a>
         </li>
       </ul>
       <!-- <div class="shadow-bottom"></div> -->
@@ -334,4 +307,5 @@
 
   </div>
   <!--  END SIDEBAR  -->
+
 
