--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -50,7 +50,7 @@
 <script src="/light/plugins/notification/snackbar/snackbar.min.js"></script>
 <script src="/light/plugins/table/datatable/datatables.js"></script>
 <script src="/light/plugins/table/datatable/custom_miscellaneous.js"></script>
-<script src="/light/plugins/countdown/jquery.countdown.js"></script>
+<script src="/light/plugins/countdown/jquery.countdown.min.js"></script>
 <script src="/light/plugins/blockui/jquery.blockUI.min.js"></script>
 
 <script src="/light/plugins/blockui/custom-blockui.js"></script>
