--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -34,6 +34,7 @@
   <link href="/light/plugins/animate/animate.css" rel="stylesheet" type="text/css" />
   <link href="/light/styles/components/custom-modal.css" rel="stylesheet" type="text/css" />
   <link href="/light/styles/components/custom-countdown.css" rel="stylesheet" type="text/css">
+  <link href="/light/styles/users/user-profile.css" rel="stylesheet" type="text/css">
 
 
 
