--- a/resources/views/errors/403.edge
+++ b/resources/views/errors/403.edge
@@ -8,9 +8,9 @@
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700&display=swap" rel="stylesheet">
-  <link href="/styles/bootstrap.css" rel="stylesheet" type="text/css" />
-  <link href="/styles/plugins.css" rel="stylesheet" type="text/css" />
-  <link href="/styles/pages/error/style-500.css" rel="stylesheet" type="text/css" />
+  <link href="/light/styles/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link href="/light/styles/plugins.css" rel="stylesheet" type="text/css" />
+  <link href="/light/styles/pages/error/style-500.css" rel="stylesheet" type="text/css" />
   <!-- END GLOBAL MANDATORY STYLES -->
 </head>
 <body class="error500 text-center">
@@ -36,9 +36,9 @@
 </div>
 
 <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
-<script src="assets/js/libs/jquery-3.1.1.min.js"></script>
-<script src="bootstrap/js/popper.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="/js/libs/jquery-3.1.1.min.js"></script>
+<script src="/js/popper.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <!-- END GLOBAL MANDATORY SCRIPTS -->
 </body>
 </html>
