--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -109,8 +109,8 @@
 <script src="/js/libs/jquery-3.1.1.min.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.js"></script>
-<script src="/plugins/table/datatable/datatables.js"></script>
-<script src="/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+<script src="/light/plugins/table/datatable/datatables.js"></script>
+<script src="/light/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 <script src="/js/app.js"></script>
 
 <script>
@@ -139,8 +139,8 @@
 
   multiCheck(c3);
 </script>
-<script src="/plugins/blockui/jquery.blockUI.min.js"></script>
+<script src="/light/plugins/blockui/jquery.blockUI.min.js"></script>
 
-<script src="/plugins/blockui/custom-blockui.js"></script>
+<script src="/light/plugins/blockui/custom-blockui.js"></script>
 <script src="/online/o.js"></script>
 
