--- a/resources/views/dashboard/profile.edge
+++ b/resources/views/dashboard/profile.edge
@@ -4,87 +4,154 @@
   <div class="layout-px-spacing">
 
     <div class="row layout-top-spacing">
-      <div class="container">
-        <div class="card component-card_4 w-100 p-5">
-        <h2>General information</h2>
-        <form>
-          {{ csrfField() }}
-          <div class="row">
-            <div class="col-lg">
-              <label>Username</label>
-              <div class="input-group mb-4">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg></span>
-                </div>
-                <input type="text" class="form-control" placeholder="Username">
+      <div class="col-xl-4 col-lg-6 col-md-5 col-sm-12 layout-top-spacing">
+
+        <div class="user-profile layout-spacing">
+          <div class="widget-content widget-content-area">
+            <div class="d-flex justify-content-between">
+              <h3 class="">Profile</h3>
+              <a href="user_account_setting.html" class="mt-2 edit-profile"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg></a>
+            </div>
+            <div class="text-center user-info">
+              <img src="/images/chat.png" alt="avatar" width="90" height="90">
+              <p class="">{{fullname}}</p>
+            </div>
+            <div class="user-info-list">
+
+              <div class="">
+                <ul class="contacts-block list-unstyled">
+                  <li class="contacts-block__item">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-coffee"><path d="M18 8h1a4 4 0 0 1 0 8h-1"></path><path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path><line x1="6" y1="1" x2="6" y2="4"></line><line x1="10" y1="1" x2="10" y2="4"></line><line x1="14" y1="1" x2="14" y2="4"></line></svg> Web Developer
+                  </li>
+                  <li class="contacts-block__item">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>Jan 20, 1989
+                  </li>
+                  <li class="contacts-block__item">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-map-pin"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>{{country}}
+                  </li>
+                  <li class="contacts-block__item">
+                    <a href="mailto:example@mail.com"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>{{email}}</a>
+                  </li>
+                  <li class="contacts-block__item">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg> +1 (530) 555-12121
+                  </li>
+                  <li class="contacts-block__item">
+                    <ul class="list-inline">
+                      <li class="list-inline-item">
+                        <div class="social-icon">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
+                        </div>
+                      </li>
+                      <li class="list-inline-item">
+                        <div class="social-icon">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
+                        </div>
+                      </li>
+                      <li class="list-inline-item">
+                        <div class="social-icon">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+                        </div>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
               </div>
             </div>
-
-
-            <div class="col-lg">
-              <label>Email</label>
-              <div class="input-group mb-4">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg></span>
-                </div>
-                <input type="text" class="form-control" placeholder="Email">
-              </div>
-            </div>
-
-
           </div>
-          <div class="row">
-            <div class="col-lg">
-              <label>Country</label>
-              <div class="input-group mb-4">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-flag"><path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"/><line x1="4" y1="22" x2="4" y2="15"/></svg></span>
+        </div>
+
+        <div class="education layout-spacing ">
+          <div class="widget-content widget-content-area">
+            <h3 class="">About</h3>
+            <div class="timeline-alter">
+              <div class="item-timeline timeline-dark">
+                <div class="t-meta-date">
+                  <p class="">04 Mar 2009</p>
                 </div>
-                <input type="text" class="form-control" placeholder="Country" >
+                <div class="t-dot">
+                </div>
+                <div class="t-text">
+                  <p>Registered</p>
+                </div>
+              </div>
+              <div class="item-timeline">
+                <div class="t-meta-date">
+                  <p class="">25 Apr 2014</p>
+                </div>
+                <div class="t-dot">
+                </div>
+                <div class="t-text">
+                  <p>Trades</p>
+                </div>
+              </div>
+              <div class="item-timeline">
+                <div class="t-meta-date">
+                  <p class="">04 Apr 2018</p>
+                </div>
+                <div class="t-dot">
+                </div>
+                <div class="t-text">
+                  <p>Last seen</p>
+                </div>
               </div>
 
+              <div class="item-timeline">
+                <div class="t-meta-date">
+                  <p class="">04 Apr 2018</p>
+                </div>
+                <div class="t-dot">
+                </div>
+                <div class="t-text">
+                  <p>Offers</p>
+                </div>
+              </div>
             </div>
           </div>
+        </div>
 
 
-
-
-          <!--password-->
-          <h2 class="mt-3">Change Password</h2>
-            <div class="row">
-              <div class="col-lg">
-                <label>New password</label>
-                <div class="input-group mb-4">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text" ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-key"><path d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"/></svg></span>
-                  </div>
-                  <input type="text" class="form-control" placeholder="New password" >
-                </div>
-              </div>
-
-              <div class="col-lg">
-                <label>Confirm password</label>
-                <div class="input-group mb-4">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text" ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-key"><path d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"/></svg></span>
-                  </div>
-                  <input type="text" class="form-control" placeholder="confirm password" >
-                </div>
-              </div>
-            </div>
-
-
-
-
-
-<button class="btn btn-rounded btn-outline-success">
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-save"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/><polyline points="17 21 17 13 7 13 7 21"/><polyline points="7 3 7 8 15 8"/></svg>
-  Save changes
-</button>
-
-        </form>
-  </div>
       </div>
+
+      <div class="col-xl-8 col-lg-6 col-md-7 col-sm-12 layout-top-spacing">
+
+        <div class="skills layout-spacing ">
+          <div class="widget-content widget-content-area">
+            <h3 class="">Trades</h3>
+            <div class="progress br-30">
+              <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>successful</span> <span>25%</span> </div></div>
+            </div>
+            <div class="progress br-30">
+              <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>pending</span> <span>50%</span> </div></div>
+            </div>
+            <div class="progress br-30">
+              <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>cancelled</span> <span>70%</span> </div></div>
+            </div>
+            <div class="progress br-30">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>disputed</span> <span>60%</span> </div></div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="bio layout-spacing ">
+          <div class="widget-content widget-content-area">
+            <h3 class="">Bio</h3>
+            <p>I'm Web Developer from California. I code and design websites worldwide. Mauris varius tellus vitae tristique sagittis. Sed aliquet, est nec auctor aliquet, orci ex vestibulum ex, non pharetra lacus erat ac nulla.</p>
+
+            <p>Sed vulputate, ligula eget mollis auctor, lectus elit feugiat urna, eget euismod turpis lectus sed ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc ut velit finibus, scelerisque sapien vitae, pharetra est. Nunc accumsan ligula vehicula scelerisque vulputate.</p>
+
+
+          </div>
+        </div>
+
+      </div>
+
+
+
+
+
+
+
 </div>
 </div>
 
